welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:9: error: ')' expected but '}' found.
}
^Diagonal:15: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:18: error: expected start of definition
	override def forward()  {
                 ^Diagonal:21: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:24: error: expected start of definition
	override def backward() {
                 ^Diagonal:27: error: Unmatched closing brace '}' ignored here
}
^