welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
var x=0
ecritMessage(x);
for (i<-1 to 6
setPos(diag,i)
x=x+1
	ecritMessage(x)
}

}
